DERBY-673: Get rid of the NodeFactory
Patch derby-673-typesafe-lists-2, which introduces generics to the
lists based on QueryTreeNodeVector. I also let the latter implement
the Iterable interface, which opens up for using Java 6 "foreach"
syntax in many cases. The patch makes use of this. Together, these
changes enables many casts to be eliminated and code clarification in
the compiler implementation.

It also removes most -Xlint warnings from impl/sql/compile classes, so
it should be ready to run with full lint.

Diffstat summary:
63 files changed, 854 insertions(+), 1236 deletions(-)

git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1497644 13f79535-47bb-0310-9956-ffa450edef68